# mcp-registry

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: roles_and_services.md  roles_and_users.md  services_management.md  user_proxy_authorization.md
mcp_storage/: crud.py  discovery.py  storage.py
src/: __init__.py  constants.py  crud.py  discovery.py  envs.py  http_endpoints.py  main.py  mcp_endpoints.py  mcp_server.py  models.py  storage.py
test/: test_http_endpoints.py  test_mcp_calls.py
