[project]
name = "mcp-storage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy",
    "pymysql",
    "fastmcp",
]

[dependency-groups]
dev = [
    "click>=8.2.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.8",
]
